# mport

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
.github/workflows/: c-cpp.yml  ci.yml  claude-review.yml  codeql-analysis.yml
cmake/: BuildUtil.cmake  FindBlocksRuntime.cmake  FindDispatch.cmake  Findkqueue.cmake  Findpthread_workqueue.cmake
libexec/: CMakeLists.txt
libexec/mport.check-fake/: CMakeLists.txt  Makefile  mport.check-fake.c
libexec/mport.check-for-older/: CMakeLists.txt  Makefile  mport.check-for-older.c
libexec/mport.create/: CMakeLists.txt  Makefile  mport.create.c
libexec/mport.delete/: CMakeLists.txt  Makefile  mport.delete.c
libexec/mport.fetch/: CMakeLists.txt  Makefile  mport.fetch.c
libexec/mport.info/: CMakeLists.txt  Makefile  mport.info.c
libexec/mport.init/: CMakeLists.txt  Makefile  mport.init.c
libexec/mport.install/: CMakeLists.txt  Makefile  mport.install.c
libexec/mport.list/: CMakeLists.txt  Makefile  mport.list.c
libexec/mport.merge/: CMakeLists.txt  Makefile  mport.merge.c
libexec/mport.query/: CMakeLists.txt  Makefile  mport.query.c
libexec/mport.update/: CMakeLists.txt  Makefile  mport.update.c
libexec/mport.updepends/: CMakeLists.txt  Makefile  mport.updepends.c
libexec/mport.version_cmp/: CMakeLists.txt  Makefile
liblua/: Makefile
libmport/: CMakeLists.txt  Makefile  age.c  annotation.c  asset.c  audit.c  autoremove.c  bundle_read.c  bundle_read_install_pkg.c  bundle_read_update_pkg.c  bundle_write.c  check_preconditions.c  clean.c  create_primative.c  db.c  default_cbs.c  delete_primative.c  fetch.c  hashmap.c  hashmap.h  import_export.c  index.c  index_depends.c  info.c  install.c  install_primative.c  instance.c  list.c  lua.c  lua_scripts.c  merge_primative.c  message.c  mport.3  mport.h  mport_lua.h  mport_private.h  mtree.c  ping.c  pkg_message.c  pkgmeta.c  (+12 more)
mport/: CMakeLists.txt  Makefile  mport.1  mport.c
skills/cppcheck-clang-format-precommit/: SKILL.md
skills/cppcheck-clang-format-precommit/scripts/: precommit_c_sanity.sh
skills/splint-post-c-sanity/scripts/: run_splint_on_staged.sh
tests/: Kyuafile  Makefile  mport_confirm_test.c  mport_db_test.c  mport_fetch_test.c  mport_index_test.c  mport_libexec_test  mport_osrelease_test.c  mport_pkgmeta_test.c  mport_util_test.c  mport_version_test.c
