cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(mport_libexec)

set(CMAKE_C_STANDARD 11
        CACHE STRING "C standard version to use (default is 11)")
message(STATUS "Requiring C${CMAKE_C_STANDARD}")
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
message(STATUS "Requiring C${CMAKE_C_STANDARD} - done")

add_subdirectory(mport.check-fake)
add_subdirectory(mport.check-for-older)
add_subdirectory(mport.create)
add_subdirectory(mport.delete)
add_subdirectory(mport.fetch)
add_subdirectory(mport.info)
add_subdirectory(mport.init)
add_subdirectory(mport.install)
add_subdirectory(mport.list)
add_subdirectory(mport.merge)
add_subdirectory(mport.query)
add_subdirectory(mport.update)
add_subdirectory(mport.updepends)
add_subdirectory(mport.version_cmp)